compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__constant_list_with_constructors_gets_pure_annotation.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "\npub type X {\n  X(Int, List(String))\n}\n\npub const x = [X(1, [\"1\"])]\npub const y = [X(1, [\"1\"])]\n        "
---
----- SOURCE CODE

pub type X {
  X(Int, List(String))
}

pub const x = [X(1, ["1"])]
pub const y = [X(1, ["1"])]
        

----- COMPILED JAVASCRIPT
import {
  List$Empty$const as $List$Empty$const,
  prepend as listPrepend,
  CustomType as $CustomType,
} from "../gleam.mjs";

export class X extends $CustomType {
  constructor($0, $1) {
    super();
    this[0] = $0;
    this[1] = $1;
  }
}
export const X$X = ($0, $1) => new X($0, $1);
export const X$isX = (value) => value instanceof X;
export const X$X$0 = (value) => value[0];
export const X$X$1 = (value) => value[1];

export const x = /* @__PURE__ */ listPrepend(
  /* @__PURE__ */ new X(1, /* @__PURE__ */ listPrepend("1", $List$Empty$const)),
  $List$Empty$const,
);

export const y = /* @__PURE__ */ listPrepend(
  /* @__PURE__ */ new X(1, /* @__PURE__ */ listPrepend("1", $List$Empty$const)),
  $List$Empty$const,
);
