compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__constructor_function_in_constant.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: pub const a = Ok
---
----- SOURCE CODE
pub const a = Ok

----- COMPILED JAVASCRIPT
import { Ok } from "../gleam.mjs";

export const a = (var0) => { return new Ok(var0); };
