compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__custom_type_constructor_imported_and_aliased.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "import other_module.{A as B}\n\npub const local = B\n"
---
----- SOURCE CODE
import other_module.{A as B}

pub const local = B


----- COMPILED JAVASCRIPT
import * as $other_module from "../../package/other_module.mjs";
import { T$A$const as T$B$const } from "../../package/other_module.mjs";

export const local = T$B$const;
