compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__imported_ok.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "import gleam\n\npub type X {\n  Ok\n}\n\npub const y = gleam.Ok\n"
---
----- SOURCE CODE
import gleam

pub type X {
  Ok
}

pub const y = gleam.Ok


----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { Ok, CustomType as $CustomType } from "../gleam.mjs";

export class Ok extends $CustomType {}
export const X$Ok$const = new Ok();
export const X$Ok = () => X$Ok$const;
export const X$isOk = (value) => value instanceof Ok;

export const y = (var0) => { return new Ok(var0); };
