compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__list_prepend.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "\nconst wibble = [2, 3, 4]\npub const wobble = [0, 1, ..wibble]\n"
---
----- SOURCE CODE

const wibble = [2, 3, 4]
pub const wobble = [0, 1, ..wibble]


----- COMPILED JAVASCRIPT
import { List$Empty$const as $List$Empty$const, prepend as listPrepend } from "../gleam.mjs";

const wibble = /* @__PURE__ */ listPrepend(
  2,
  listPrepend(3, listPrepend(4, $List$Empty$const)),
);

export const wobble = /* @__PURE__ */ listPrepend(
  0,
  listPrepend(
    1,
    listPrepend(2, listPrepend(3, listPrepend(4, $List$Empty$const))),
  ),
);
