compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__list_prepend_from_other_module.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "\nimport mod\n\npub const wobble = [0, 1, ..mod.wibble]\n"
---
----- SOURCE CODE
-- mod.gleam
pub const wibble = [2, 3, 4]

-- main.gleam

import mod

pub const wobble = [0, 1, ..mod.wibble]


----- COMPILED JAVASCRIPT
import { toList, prepend as listPrepend } from "../gleam.mjs";
import * as $mod from "../mod.mjs";

export const wobble = /* @__PURE__ */ listPrepend(
  0,
  listPrepend(1, $mod.wibble),
);
