compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__literal_bool_does_not_get_constant_annotation.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "\n        pub const a = True\n        pub const b = False\n    "
---
----- SOURCE CODE

        pub const a = True
        pub const b = False
    

----- COMPILED JAVASCRIPT
export const a = true;

export const b = false;
